--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
     <li data-target="#myCarousel" data-slide-to="1"></li>
     <li data-target="#myCarousel" data-slide-to="2"></li>
+    <li data-target="#myCarousel" data-slide-to="3"></li>
   </ol>
   <div class="carousel-inner">
     <div class="item active">
@@ -95,7 +96,20 @@
         </div>
       </div>
     </div>
+     <div class="item">
+      <div class="container">
+        <div class="carousel-caption">
+          <div class="embed-responsive embed-responsive">
+     		 <iframe class = "embed-responsive-item" src = "MarcoAnnunziata_2013S-480p.mp4"></iframe>
+     	 </div>
+          <h1>Industrial Internet</h1>
+          <p>Apps rocket towards $25 billion in sales. Expected to rise more.</p>
+          <p><a class="btn btn-large btn-primary" href="#">Browse more</a></p>
+        </div>
+      </div>
+    </div>
   </div>
+ 
   <!-- Controls -->
   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
     <span class="icon-prev"></span>
