--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">IoT/IoE Products</a></li>
+                <li><a href="iot.html">IoT/IoE Products</a></li>
                 <li><a href="#">Big Data Products</a></li>
                 <li><a href="#">Mobile Products</a></li>
               </ul>
@@ -139,7 +139,7 @@
       <img class="img-circle" src="iot2.png" width = "250px" height ="100px">
       <h2>Internet of Things/Internet of Everything</h2>
       <p>We provide IoT IoE technology platforms that provides the ability to transform the ambience of your home or workplace using smartpohne. </p>
-      <p><a class="btn btn-default" href="#">View details »</a></p>
+      <p><a class="btn btn-default" href="iot.html">View details »</a></p>
     </div>
     <div class="col-md-4 text-center">
       <img class="img-circle" src="mobile1.jpg" width = "250px" height ="100px">
