--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
              <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Management</a></li>
+                <li><a href="management.html">Management</a></li>
                 <li><a href="#">Code of Conduct</a></li>
                 <li><a href="#">Business Process</a></li>
                 <li><a href="#">Locations</a></li>
