--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </ol>
   <div class="carousel-inner">
     <div class="item active">
-      <img src="bigdata.jpg" class="img-responsive">
+      <img src="img/bigdata.jpg" class="img-responsive">
       <div class="container">
         <div class="carousel-caption">
           <h1>Big Data</h1>
@@ -77,7 +77,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="iot.png" class="img-responsive">
+      <img src="img/iot.png" class="img-responsive">
       <div class="container">
         <div class="carousel-caption">
           <h1>Internet of Things/ Internet of Eveything</h1>
@@ -87,7 +87,7 @@
       </div>
     </div>
     <div class="item">
-      <img src="mobile11.jpg" class="img-responsive">
+      <img src="img/mobile11.jpg" class="img-responsive">
       <div class="container">
         <div class="carousel-caption">
           <h1>Mobile Applications </h1>
@@ -130,19 +130,19 @@
   <!-- Three columns of text below the carousel -->
   <div class="row">
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="bigdata2.jpg" width = "250px" height ="100px">
+      <img class="img-circle" src="img/bigdata2.jpg" width = "250px" height ="100px">
       <h2>Big Data Analytics</h2>
       <p>Our Big Data Analytics products enables you to analyze a mix of structured, semi-structured and unstructured data in search of valuable business information and insights</p>
       <p><a class="btn btn-default" href="#">View details »</a></p>
     </div>
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="iot2.png" width = "250px" height ="100px">
+      <img class="img-circle" src="img/iot2.png" width = "250px" height ="100px">
       <h2>Internet of Things/Internet of Everything</h2>
       <p>We provide IoT IoE technology platforms that provides the ability to transform the ambience of your home or workplace using smartpohne. </p>
       <p><a class="btn btn-default" href="iot.html">View details »</a></p>
     </div>
     <div class="col-md-4 text-center">
-      <img class="img-circle" src="mobile1.jpg" width = "250px" height ="100px">
+      <img class="img-circle" src="img/mobile1.jpg" width = "250px" height ="100px">
       <h2>Mobile Applications</h2>
       <p>We build the best mobile applications for your need. Our apps will surpass your expectations. </p>
       <p><a class="btn btn-default" href="#">View details »</a></p>
