Updated the index.html with the img folder extension for all images

--- a/management.html
+++ b/management.html
@@ -82,15 +82,15 @@
          <div class="row">
           <div class="btn-group">
             
-              <img src="management.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal">
-              <img src="management1.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal1">
-              <img src="management2.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal2"> 
-              <img src="management3.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal3">
+              <img src="img/management.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal">
+              <img src="img/management1.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal1">
+              <img src="img/management2.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal2"> 
+              <img src="img/management3.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal3">
               <br><br><br>
-              <img src="management4.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal4">
-              <img src="management5.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal5">
-              <img src="management6.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal6"> 
-              <img src="management7.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal7">
+              <img src="img/management4.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal4">
+              <img src="img/management5.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal5">
+              <img src="img/management6.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal6"> 
+              <img src="img/management7.jpg" width="200" height="200" alt="" data-toggle="modal" data-target="#myModal7">
              <!-- Modal -->
               <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
                 <div class="modal-dialog">
@@ -100,7 +100,7 @@
                       <h4 class="modal-title" id="myModalLabel">J. Smith, Chief Executive Officer</h4>
                     </div>
                      <div class="modal-body row">
-                      <div class="col-sm-5"><img src="management.jpg" width="200" height="200" alt=""></div>
+                      <div class="col-sm-5"><img src="img/management.jpg" width="200" height="200" alt=""></div>
                       <div class="col-sm-7"><p>Mr. Smith received his BS in engineering at Massachusetts Institute of Technology in May, 1995 and co-founded his first business, iStudy, while a student at MIT.  The venture was acquired by BIG Textbooks Co. in 2002 for $8 million.  Smith worked as a senior software developer at BIG Software from 1996 to 2002 and helped to develop the company’s leading BIG-Pub desktop publishing software.    He co-founded iWidget, Inc. with R. Jones in 2002 and together, they successfully launched iWidget Pro in 2004.
                     </p></div>
                     </div>
@@ -116,7 +116,7 @@
                       <h4 class="modal-title" id="myModalLabel">R. Jones, Chief Operating Officer</h4>
                     </div>
                      <div class="modal-body row">
-                      <div class="col-sm-5"><img src="management1.jpg" width="200" height="200" alt=""></div>
+                      <div class="col-sm-5"><img src="img/management1.jpg" width="200" height="200" alt=""></div>
                       <div class="col-sm-7"><p>Mr. Jones received his BS in engineering at Massachusetts Institute of Technology in May, 1995 and co-founded iStudy with Mr. Smith while a student at MIT.  Mr. Jones helped to develop some of the online gaming industry’s first software while as an associate at Ace Online Game Co. of Las Vegas, Nevada.  He then joined J. Smith to to co-found iWidget, Inc. in 2002.
                       </p></div>
                     </div>
@@ -131,7 +131,7 @@
                       <h4 class="modal-title" id="myModalLabel">Jane Doe, Chief Financial Officer</h4>
                     </div>
                     <div class="modal-body row">
-                      <div class="col-sm-5"><img src="management2.jpg" width="200" height="200" alt=""></div>
+                      <div class="col-sm-5"><img src="img/management2.jpg" width="200" height="200" alt=""></div>
                       <div class="col-sm-7"><p>Ms. Doe received a BS in Statistics and Finance from Massachusetts Institute of Technology and holds an MBA from MIT’s Sloan School of Management.  Prior to joining iWidget, Ms. Do served as Chief Financial Officer of iTarget Software and Senior Vice President in charge of Finance at New Angle Software.</p></div>
                     </div>
                   </div>
@@ -145,7 +145,7 @@
                       <h4 class="modal-title" id="myModalLabel">R. Jones, Chief Operating Officer</h4>
                     </div>
                      <div class="modal-body row">
-                      <div class="col-sm-5"><img src="management3.jpg" width="200" height="200" alt=""></div>
+                      <div class="col-sm-5"><img src="img/management3.jpg" width="200" height="200" alt=""></div>
                       <div class="col-sm-7"><p>Mr. Jones received his BS in engineering at Massachusetts Institute of Technology in May, 1995 and co-founded iStudy with Mr. Smith while a student at MIT.  Mr. Jones helped to develop some of the online gaming industry’s first software while as an associate at Ace Online Game Co. of Las Vegas, Nevada.  He then joined J. Smith to to co-found iWidget, Inc. in 2002.
                       Mr. Jones received his BS in engineering at Massachusetts Institute of Technology in May, 1995 and co-founded iStudy with Mr. Smith while a student at MIT.  Mr. Jones helped to develop some of the online gaming industry’s first software while as an associate at Ace Online Game Co. of Las Vegas, Nevada.  He then joined J. Smith to to co-found iWidget, Inc. in 2002.</p></div>
                     </div>
@@ -160,7 +160,7 @@
                       <h4 class="modal-title" id="myModalLabel">J. Jacobs, Executive Director</h4>
                     </div>
                      <div class="modal-body row">
-                      <div class="col-sm-5"><img src="management4.jpg" width="200" height="200" alt=""></div>
+                      <div class="col-sm-5"><img src="img/management4.jpg" width="200" height="200" alt=""></div>
                       <div class="col-sm-7"><p>Mr. Jacobs received a BS in Statistics and Finance from Massachusetts Institute of Technology and holds an MBA from MIT’s Sloan School of Management.  Prior to joining iWidget, Ms. Do served as Chief Financial Officer of iTarget Software and Senior Vice President in charge of Finance at New Angle Software.
                       Mr. Doe received a BS in Statistics and Finance from Massachusetts Institute of Technology and holds an MBA from MIT’s Sloan School of Management.  Prior to joining iWidget, Ms. Do served as Chief Financial Officer of iTarget Software and Senior Vice President in charge of Finance at New Angle Software.</p></div>
                     </div>
@@ -175,7 +175,7 @@
                       <h4 class="modal-title" id="myModalLabel">J. Smith, Chief Executive Officer</h4>
                     </div>
                      <div class="modal-body row">
-                      <div class="col-sm-5"><img src="management5.jpg" width="200" height="200" alt=""></div>
+                      <div class="col-sm-5"><img src="img/management5.jpg" width="200" height="200" alt=""></div>
                       <div class="col-sm-7"><p>Mr. Smith received a BS in Statistics and Finance from Massachusetts Institute of Technology and holds an MBA from MIT’s Sloan School of Management.  Prior to joining iWidget, Ms. Do served as Chief Financial Officer of iTarget Software and Senior Vice President in charge of Finance at New Angle Software.</p></div>
                     </div>
                   </div>
@@ -189,7 +189,7 @@
                       <h4 class="modal-title" id="myModalLabel">Jane. Spier, Chief Technical Officer</h4>
                     </div>
                      <div class="modal-body row">
-                      <div class="col-sm-5"><img src="management6.jpg" width="200" height="200" alt=""></div>
+                      <div class="col-sm-5"><img src="img/management6.jpg" width="200" height="200" alt=""></div>
                       <div class="col-sm-7"><p>Ms. Spier received a BS in Statistics and Finance from Massachusetts Institute of Technology and holds an MBA from MIT’s Sloan School of Management.  Prior to joining iWidget, Ms. Do served as Chief Financial Officer of iTarget Software and Senior Vice President in charge of Finance at New Angle Software.Ms. Doe received a BS in Statistics and Finance from Massachusetts Institute of Technology and holds an MBA from MIT’s Sloan School of Management.  Prior to joining iWidget, Ms. Do served as Chief Financial Officer of iTarget Software and Senior Vice President in charge of Finance at New Angle Software.</p></div>
                     </div>
                   </div>
@@ -203,7 +203,7 @@
                       <h4 class="modal-title" id="myModalLabel">Padmashree Warrier, Management Head - Operations</h4>
                     </div>
                      <div class="modal-body row">
-                      <div class="col-sm-5"><img src="management7.jpg" width="200" height="200" alt=""></div>
+                      <div class="col-sm-5"><img src="img/management7.jpg" width="200" height="200" alt=""></div>
                       <div class="col-sm-7"><p>Ms. Doe received a BS in Statistics and Finance from Massachusetts Institute of Technology and holds an MBA from MIT’s Sloan School of Management.  Prior to joining iWidget, Ms. Do served as Chief Financial Officer of iTarget Software and Senior Vice President in charge of Finance at New Angle Software.
                         Ms. Doe received a BS in Statistics and Finance from Massachusetts Institute of Technology and holds an MBA from MIT’s Sloan School of Management.  Prior to joining iWidget, Ms. Do served as Chief Financial Officer of iTarget Software and Senior Vice President in charge of Finance at New Angle Software.</p></div>
                     </div>
