footer and landing page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link href="css/styles.css" rel="stylesheet">
 	</head>
 	<body>
-<div class="navbar-wrapper">
+<div class="navbar navbar-wrapper">
   <div class="container">
     <div class="navbar navbar-inverse navbar-static-top">
       
@@ -104,7 +104,6 @@
      	 </div>
           <h1>Industrial Internet</h1>
           <p>Apps rocket towards $25 billion in sales. Expected to rise more.</p>
-          <p><a class="btn btn-large btn-primary" href="#">Browse more</a></p>
         </div>
       </div>
     </div>
@@ -145,46 +144,23 @@
       <img class="img-circle" src="img/mobile1.jpg" width = "250px" height ="100px">
       <h2>Mobile Applications</h2>
       <p>We build the best mobile applications for your need. Our apps will surpass your expectations. </p>
-      <p><a class="btn btn-default" href="#">View details »</a></p>
+      <p><a class="btn btn-default" href="#">View details »</a></p> <br> <br>
     </div>
   </div><!-- /.row -->
 
-
-  <!-- START THE FEATURETTES -->
-
-  <hr class="featurette-divider">
-
-  <div class="featurette">
-    <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-    <h2 class="featurette-heading">Responsive Design. <span class="text-muted">It'll blow your mind.</span></h2>
-    <p class="lead">In simple terms, a responsive web design figures out what resolution of device it's being served on. Flexible grids then size correctly to fit the screen.</p>
-  </div>
-
-  <hr class="featurette-divider">
-
-  <div class="featurette">
-    <img class="featurette-image img-circle pull-left" src="http://placehold.it/512">
-    <h2 class="featurette-heading">Smaller Footprint. <span class="text-muted">Lightweight.</span></h2>
-    <p class="lead">The new Bootstrap 3 promises to be a smaller build. The separate Bootstrap base and responsive.css files have now been merged into one. There is no more fixed grid, only fluid.</p>
-  </div>
-
-  <hr class="featurette-divider">
-
-  <div class="featurette">
-    <img class="featurette-image img-circle pull-right" src="http://placehold.it/512">
-    <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Flatness.</span></h2>
-    <p class="lead">A big design trend for 2013 is "flat" design. Gone are the days of excessive gradients and shadows. Designers are producing cleaner flat designs, and Bootstrap 3 takes advantage of this minimalist trend.</p>
-  </div>
-
-  <hr class="featurette-divider">
-
-  <!-- /END THE FEATURETTES -->
-
-
-  <!-- FOOTER -->
-  <footer>
-    <p class="pull-right"><a href="#">Back to top</a></p>
-    <p>This Bootstrap layout is compliments of Bootply. · <a href="http://www.bootply.com/62603">Edit on Bootply.com</a></p>
+   <footer class="text-center" style = "background-color:lightgrey" >
+        <div class="footer-above">
+            <div class="container"> </div> </div>
+       <div class="footer-below">
+        <div class="container">
+            <div class="row">
+            <p class="pull-right"><a href="#">Back to top</a></p>
+                <div class="col-lg-12">
+                    <b>Copyright &copy; UX Booth </b>
+                </div>
+            </div>
+        </div>
+    </div>
   </footer>
 
 </div><!-- /.container -->
