location page, images, hrefs

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li><a href="management.html">Management</a></li>
                 <li><a href="#">Code of Conduct</a></li>
                 <li><a href="#">Business Process</a></li>
-                <li><a href="#">Locations</a></li>
+                <li><a href="locations.html">Locations</a></li>
                 <li><a href="#">Contacts</a></li>
               </ul>
             </li>
@@ -110,8 +110,8 @@
           <span class="name-first">Marco Annunziata</span> </h2>
         <h4>
            Welcome to the age of the industrial internet </h4>
-            <video class ="center" width="650" height="350" controls>
- <source src = "http://www.ted.com/talks/marco_annunziata_welcome_to_the_age_of_the_industrial_internet?embed=true" type="video/mp4" target="_blank"> </video>
+           <!--  <video class ="center" width="650" height="350" controls>
+ <source src = "http://www.ted.com/talks/marco_annunziata_welcome_to_the_age_of_the_industrial_internet?embed=true" type="video/mp4" target="_blank"> </video> -->
       </div>
     </div>
   </div>
