--- a/iot.html
+++ b/iot.html
@@ -33,18 +33,18 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">Products <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">IoT/IoE Products</a></li>
-                <li><a href="#">Big Data Products</a></li>
+                <li><a href="iot.html">IoT/IoE Products</a></li>
+                <li><a href="bigdata.html">Big Data Products</a></li>
                 <li><a href="#">Mobile Products</a></li>
               </ul>
             </li>
              <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">About Us<b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="#">Management</a></li>
+                <li><a href="management.html">Management</a></li>
                 <li><a href="#">Code of Conduct</a></li>
                 <li><a href="#">Business Process</a></li>
-                <li><a href="#">Locations</a></li>
+                <li><a href="locations.html">Locations</a></li>
                 <li><a href="#">Contacts</a></li>
               </ul>
             </li>
