--- a/management.html
+++ b/management.html
@@ -42,7 +42,7 @@
                 <li><a href="management.html">Management</a></li>
                 <li><a href="#">Code of Conduct</a></li>
                 <li><a href="#">Business Process</a></li>
-                <li><a href="#">Locations</a></li>
+                <li><a href="locations.html">Locations</a></li>
                 <li><a href="#">Contacts</a></li>
               </ul>
             </li>
