--- a/bigdata.html
+++ b/bigdata.html
@@ -117,7 +117,7 @@
         <h4 class="modal-title" id="myModalLabel">Download White paper</h4>
       </div>
       <div class="modal-body">
-       <form role="form">
+       <form role="form" method = "get" action = "bigdatawhitepaper.pdf">
   <div class="form-group">
     <label for="first name">Enter First Name</label>
     <input type="text" class="form-control" id="firstName" placeholder="Enter First Name">
@@ -125,10 +125,6 @@
   <div class="form-group">
     <label for="last name">Enter Last Name</label>
     <input type="text" class="form-control" id="lastName" placeholder="Enter Last Name">
-  </div>
-   <div class="form-group">
-    <label for="email">Email address</label>
-    <input type="email" class="form-control" id="email" placeholder="Enter EmailId">
   </div>
 </form>
       </div>
