--- a/locations.html
+++ b/locations.html
@@ -13,11 +13,13 @@
 		<link href="css/styles.css" rel="stylesheet">
 		<script src="https://maps.googleapis.com/maps/api/js"></script>
 
-		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:350px;width:300px;">
+		<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 		
 		<style>#gmap_canvas img{max-width:none!important;background:none!important}</style>
-		<a class="google-map-code" href="http://www.trivoo.net/gutscheine/goertz/" id="get-map-data">trivoo.net</a></div>
+		<style>#gmap_canvas1 img{max-width:none!important;background:none!important}</style>
+		
 		<script type="text/javascript"> function init_map(){var myOptions = {zoom:14,center:new google.maps.LatLng(37.567625,-121.975119),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.567625, -121.975119)});infowindow = new google.maps.InfoWindow({content:"<b>Centers for Global Software Dev</b><br/>628 Crescent Terrace<br/>94536 Fremont" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);
+		 function init_map1(){var myOptions = {zoom:14,center:new google.maps.LatLng(37.567625,-121.975119),mapTypeId: google.maps.MapTypeId.ROADMAP};map = new google.maps.Map(document.getElementById("gmap_canvas1"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(37.567625, -121.975119)});infowindow = new google.maps.InfoWindow({content:"<b>Center for CTO office</b><br/>1-14/50, Minister road<br/>Hyderabad" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map1);
 		</script>
 <style>
       #map_canvas {
@@ -90,33 +92,44 @@
     </div>
   </div><!-- /container -->
 </nav><!-- /navbar wrapper -->
-
-<div class="row" id="section">	
-<div style="margin:-167px 15px 15px 445px" class="col-md-6 col-md-offset-3">
+<div style="margin-top:120px" class="well">
+<div class="row">	
+<div class="col-md-12 col-md-offset-5"><font face="helvetica" size="6" color="black">Locations<br></font></div>
+<div class="col-md-3 col-md-offset-3">
 	<p><b>Centers for Global Software Development</b><br>
 	<b>& Sarasvarhy Learning Centers:: Fremont</b></p>
 	<p>628 Crescent Terrace,Fremont, CA 94536, USA</p>
 <div id="gmap_canvas" style="height:350px;width:300px;"></div>
 </div>
+<div class="col-md-2 col-md-offset-1">
+	<p><b>Center for CTO office</b><br>
+	<b>1-14/50, Minister road</b></p>
+	<p>Hyderabad, India</p>
+<div id="gmap_canvas1" style="height:350px;width:300px;"></div>
 </div>
 </div>
 
 </div>
-</div>
+  
+  <!-- script references -->
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <!-- footer -->
  <footer class="text-center" style = "background-color:lightgrey" >
+        <div class="footer-above">
+            <div class="container"> </div> </div>
+       <div class="footer-below">
+        <div class="container">
             <div class="row">
             <p class="pull-right"><a href="#">Back to top</a></p>
                 <div class="col-lg-12">
                     <b>Copyright &copy; UX Booth </b>
                 </div>
             </div>
+        </div>
+    </div>
   </footer>
-  
-  <!-- script references -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    
+  <!-- footer end -->
   <!-- footer end -->
 	</body>
 </html>
