--- a/bigdata.html
+++ b/bigdata.html
@@ -9,7 +9,15 @@
 		<link href="css/bootstrap.min.css" rel="stylesheet">
     <style>
     .center { margin: 0 auto; width: 400px }
+	
     </style>
+	<style>
+.popover-example .popover {
+  position: relative;
+  display: block;
+  margin: 20px;
+}
+</style>
 		<!--[if lt IE 9]>
 			<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
@@ -57,8 +65,8 @@
     </div>
   </div><!-- /container -->
 </nav><!-- /navbar wrapper -->
-<div class="row">	
-<div style="margin-top:100px" class="col-md-6 col-md-offset-3">
+<div style="margin-top:100px" class="row">	
+<div  class="col-md-6 col-md-offset-3">
 <div class="well">
 <div class="col-md-12 col-md-offset-3">
 	<font face="helvetica" size="6" color="black">Big Data</font>
@@ -70,6 +78,30 @@
   <source src="http://bf8fcd4f31d9ca6d7463-c4f4a16d0f2ac0333178bfe6aae76f13.r51.cf1.rackcdn.com/_2_Minute_Edit-v4.mp4" type="video/mp4">
   <source src = "http://bf8fcd4f31d9ca6d7463-c4f4a16d0f2ac0333178bfe6aae76f13.r51.cf1.rackcdn.com/_2_Minute_Edit-v4.mp4.ogg" type = "video/ogg">
 </video></div> 
+</div>
+<div class="col-md-2 ">
+
+<div class="popover-example">
+    <div class="popover top">
+      <div class="arrow"></div>
+      <h3 class="popover-title">Accolade 1</h3>
+      <div class="popover-content">
+        <p>No. 1 in the Big Data research</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="col-md-2 ">
+
+<div class="popover-example">
+    <div class="popover top">
+      <div class="arrow"></div>
+      <h3 class="popover-title">Accolade 2</h3>
+      <div class="popover-content">
+        <p>Awarded Excellent Solution award</p>
+      </div>
+    </div>
+  </div>
 </div>
 </div>
 <div class="row">
@@ -128,7 +160,7 @@
   </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal">&nbsp;Cancel&nbsp;</button>
-        <button type="button" id = "btn1" class="btn btn-primary" onclick = "downloadFile()">Submit</button>
+        <button type="button" id = "btn1" class="btn btn-primary" onclick = "downloadFile()"><a href = "bigdatawhitepaper.pdf" download = "download/bigdata.pdf"></a>Submit</button>
         <a href = "bigdatawhitepaper.pdf" download = "download/bigdata.pdf">Download</a>
      </form>
      </div>
