--- a/index.html
+++ b/index.html
@@ -101,17 +101,15 @@
         <div class="carousel-caption">
              <h1>Industrial Internet</h1>
           <p>Apps rocket towards $25 billion in sales. Expected to rise more.</p>
-<!--             <video class ="center" width="550" height="350" controls>
-  <source src="http://bf8fcd4f31d9ca6d7463-c4f4a16d0f2ac0333178bfe6aae76f13.r51.cf1.rackcdn.com/_2_Minute_Edit-v4.mp4" type="video/mp4">
-  <source src = "http://bf8fcd4f31d9ca6d7463-c4f4a16d0f2ac0333178bfe6aae76f13.r51.cf1.rackcdn.com/_2_Minute_Edit-v4.mp4.ogg" type = "video/ogg">
-</video> -->
       <div class="icon-play">Play video</div>
         <h2>
           <span class="name-first">Marco Annunziata</span> </h2>
         <h4>
            Welcome to the age of the industrial internet </h4>
-           <!--  <video class ="center" width="650" height="350" controls>
- <source src = "http://www.ted.com/talks/marco_annunziata_welcome_to_the_age_of_the_industrial_internet?embed=true" type="video/mp4" target="_blank"> </video> -->
+            <video class ="center" width="650" height="350" controls>
+            <source src="http://bf8fcd4f31d9ca6d7463-c4f4a16d0f2ac0333178bfe6aae76f13.r51.cf1.rackcdn.com/_2_Minute_Edit-v4.mp4" type="video/mp4">
+  <source src = "http://bf8fcd4f31d9ca6d7463-c4f4a16d0f2ac0333178bfe6aae76f13.r51.cf1.rackcdn.com/_2_Minute_Edit-v4.mp4.ogg" type = "video/ogg">
+ <!-- <source src = "http://www.ted.com/talks/marco_annunziata_welcome_to_the_age_of_the_industrial_internet?embed=true" type="video/mp4" target="_blank"> </video> --> -->
       </div>
     </div>
   </div>
